uid/parser.output
Terminals unused in grammar

   T_GARBAGE
   T_ERR


State 22 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 72 conflicts: 13 reduce/reduce
State 74 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement

    2 statement: statement T_SEMIC statement
    3          | T_SKIP
    4          | variable T_ASSIGN T_NEW record
    5          | variable T_ASSIGN expression
    6          | T_ALWAYS constraint
    7          | T_ONCE constraint
    8          | T_IF expression T_THEN statement T_ELSE statement
    9          | T_WHILE expression T_DO statement

   10 constraint: rho expression
   11           | expression
   12           | constraint T_AND constraint

   13 rho: T_WEAK
   14    | T_MEDIUM
   15    | T_REQUIRED

   16 expression: expression woperation expression
   17           | expression soperation expression
   18           | expression comparison expression
   19           | accessor T_IDENTICAL accessor
   20           | expression combination expression
   21           | expression disjunction expression
   22           | value
   23           | reference
   24           | accessor
   25           | dereference

   26 accessor: variable
   27         | expression T_DOT label

   28 record: T_LBRACE fieldexpressions T_RBRACE

   29 dereference: T_H_DEREF T_LPAREN reference T_RPAREN

   30 reference: T_REF

   31 constant: T_REALCONST
   32         | T_TRUE
   33         | T_FALSE
   34         | T_NIL
   35         | T_STRING

   36 variable: T_IDENT

   37 label: T_IDENT

   38 value: constant

   39 fieldexpressions: %empty
   40                 | fieldexpression
   41                 | fieldexpression T_COMMA fieldexpressions

   42 fieldexpression: label T_COLON expression

   43 soperation: T_ADD
   44           | T_SUB

   45 woperation: T_MUL
   46           | T_DIV

   47 comparison: T_LESSTHAN
   48           | T_LEQUAL
   49           | T_EQUAL
   50           | T_NEQUAL
   51           | T_GEQUAL
   52           | T_GREATERTHAN

   53 combination: T_AND

   54 disjunction: T_OR


Terminals, with rules where they appear

$end (0) 0
error (256)
T_SEMIC (258) 2
T_ASSIGN (259) 4 5
T_IDENT (260) 36 37
T_REALCONST (261) 31
T_STRING (262) 35
T_H_DEREF (263) 29
T_REF (264) 30
T_NEW (265) 4
T_IDENTICAL (266) 19
T_LPAREN (267) 29
T_RPAREN (268) 29
T_LESSTHAN (269) 47
T_LEQUAL (270) 48
T_EQUAL (271) 49
T_NEQUAL (272) 50
T_GEQUAL (273) 51
T_GREATERTHAN (274) 52
T_OR (275) 54
T_AND (276) 12 53
T_ADD (277) 43
T_SUB (278) 44
T_MUL (279) 45
T_DIV (280) 46
T_LBRACE (281) 28
T_RBRACE (282) 28
T_COLON (283) 42
T_COMMA (284) 41
T_DOT (285) 27
T_GARBAGE (286)
T_SKIP (287) 3
T_ALWAYS (288) 6
T_ONCE (289) 7
T_WEAK (290) 13
T_MEDIUM (291) 14
T_REQUIRED (292) 15
T_IF (293) 8
T_THEN (294) 8
T_ELSE (295) 8
T_WHILE (296) 9
T_DO (297) 9
T_TRUE (298) 32
T_FALSE (299) 33
T_NIL (300) 34
T_ERR (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
statement (49)
    on left: 2 3 4 5 6 7 8 9, on right: 1 2 8 9
constraint (50)
    on left: 10 11 12, on right: 6 7 12
rho (51)
    on left: 13 14 15, on right: 10
expression (52)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 5 8 9 10 11 16
    17 18 20 21 27 42
accessor (53)
    on left: 26 27, on right: 19 24
record (54)
    on left: 28, on right: 4
dereference (55)
    on left: 29, on right: 25
reference (56)
    on left: 30, on right: 23 29
constant (57)
    on left: 31 32 33 34 35, on right: 38
variable (58)
    on left: 36, on right: 4 5 26
label (59)
    on left: 37, on right: 27 42
value (60)
    on left: 38, on right: 22
fieldexpressions (61)
    on left: 39 40 41, on right: 28 41
fieldexpression (62)
    on left: 42, on right: 40 41
soperation (63)
    on left: 43 44, on right: 17
woperation (64)
    on left: 45 46, on right: 16
comparison (65)
    on left: 47 48 49 50 51 52, on right: 18
combination (66)
    on left: 53, on right: 20
disjunction (67)
    on left: 54, on right: 21


State 0

    0 $accept: . program $end

    T_IDENT   shift, and go to state 1
    T_SKIP    shift, and go to state 2
    T_ALWAYS  shift, and go to state 3
    T_ONCE    shift, and go to state 4
    T_IF      shift, and go to state 5
    T_WHILE   shift, and go to state 6

    program    go to state 7
    statement  go to state 8
    variable   go to state 9


State 1

   36 variable: T_IDENT .

    $default  reduce using rule 36 (variable)


State 2

    3 statement: T_SKIP .

    $default  reduce using rule 3 (statement)


State 3

    6 statement: T_ALWAYS . constraint

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_WEAK       shift, and go to state 14
    T_MEDIUM     shift, and go to state 15
    T_REQUIRED   shift, and go to state 16
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    constraint   go to state 20
    rho          go to state 21
    expression   go to state 22
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 4

    7 statement: T_ONCE . constraint

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_WEAK       shift, and go to state 14
    T_MEDIUM     shift, and go to state 15
    T_REQUIRED   shift, and go to state 16
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    constraint   go to state 29
    rho          go to state 21
    expression   go to state 22
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 5

    8 statement: T_IF . expression T_THEN statement T_ELSE statement

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 30
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 6

    9 statement: T_WHILE . expression T_DO statement

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 31
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 7

    0 $accept: program . $end

    $end  shift, and go to state 32


State 8

    1 program: statement .
    2 statement: statement . T_SEMIC statement

    T_SEMIC  shift, and go to state 33

    $default  reduce using rule 1 (program)


State 9

    4 statement: variable . T_ASSIGN T_NEW record
    5          | variable . T_ASSIGN expression

    T_ASSIGN  shift, and go to state 34


State 10

   31 constant: T_REALCONST .

    $default  reduce using rule 31 (constant)


State 11

   35 constant: T_STRING .

    $default  reduce using rule 35 (constant)


State 12

   29 dereference: T_H_DEREF . T_LPAREN reference T_RPAREN

    T_LPAREN  shift, and go to state 35


State 13

   30 reference: T_REF .

    $default  reduce using rule 30 (reference)


State 14

   13 rho: T_WEAK .

    $default  reduce using rule 13 (rho)


State 15

   14 rho: T_MEDIUM .

    $default  reduce using rule 14 (rho)


State 16

   15 rho: T_REQUIRED .

    $default  reduce using rule 15 (rho)


State 17

   32 constant: T_TRUE .

    $default  reduce using rule 32 (constant)


State 18

   33 constant: T_FALSE .

    $default  reduce using rule 33 (constant)


State 19

   34 constant: T_NIL .

    $default  reduce using rule 34 (constant)


State 20

    6 statement: T_ALWAYS constraint .
   12 constraint: constraint . T_AND constraint

    T_AND  shift, and go to state 36

    $default  reduce using rule 6 (statement)


State 21

   10 constraint: rho . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 37
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 22

   11 constraint: expression .
   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_OR           shift, and go to state 44
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50

    T_AND     [reduce using rule 11 (constraint)]
    $default  reduce using rule 11 (constraint)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 23

   19 expression: accessor . T_IDENTICAL accessor
   24           | accessor .

    T_IDENTICAL  shift, and go to state 56

    $default  reduce using rule 24 (expression)


State 24

   25 expression: dereference .

    $default  reduce using rule 25 (expression)


State 25

   23 expression: reference .

    $default  reduce using rule 23 (expression)


State 26

   38 value: constant .

    $default  reduce using rule 38 (value)


State 27

   26 accessor: variable .

    $default  reduce using rule 26 (accessor)


State 28

   22 expression: value .

    $default  reduce using rule 22 (expression)


State 29

    7 statement: T_ONCE constraint .
   12 constraint: constraint . T_AND constraint

    T_AND  shift, and go to state 36

    $default  reduce using rule 7 (statement)


State 30

    8 statement: T_IF expression . T_THEN statement T_ELSE statement
   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_OR           shift, and go to state 44
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50
    T_THEN         shift, and go to state 57

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 31

    9 statement: T_WHILE expression . T_DO statement
   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_OR           shift, and go to state 44
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50
    T_DO           shift, and go to state 58

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 32

    0 $accept: program $end .

    $default  accept


State 33

    2 statement: statement T_SEMIC . statement

    T_IDENT   shift, and go to state 1
    T_SKIP    shift, and go to state 2
    T_ALWAYS  shift, and go to state 3
    T_ONCE    shift, and go to state 4
    T_IF      shift, and go to state 5
    T_WHILE   shift, and go to state 6

    statement  go to state 59
    variable   go to state 9


State 34

    4 statement: variable T_ASSIGN . T_NEW record
    5          | variable T_ASSIGN . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_NEW        shift, and go to state 60
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 61
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 35

   29 dereference: T_H_DEREF T_LPAREN . reference T_RPAREN

    T_REF  shift, and go to state 13

    reference  go to state 62


State 36

   12 constraint: constraint T_AND . constraint

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_WEAK       shift, and go to state 14
    T_MEDIUM     shift, and go to state 15
    T_REQUIRED   shift, and go to state 16
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    constraint   go to state 63
    rho          go to state 21
    expression   go to state 22
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 37

   10 constraint: rho expression .
   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_OR           shift, and go to state 44
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50

    T_AND     [reduce using rule 10 (constraint)]
    $default  reduce using rule 10 (constraint)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 38

   47 comparison: T_LESSTHAN .

    $default  reduce using rule 47 (comparison)


State 39

   48 comparison: T_LEQUAL .

    $default  reduce using rule 48 (comparison)


State 40

   49 comparison: T_EQUAL .

    $default  reduce using rule 49 (comparison)


State 41

   50 comparison: T_NEQUAL .

    $default  reduce using rule 50 (comparison)


State 42

   51 comparison: T_GEQUAL .

    $default  reduce using rule 51 (comparison)


State 43

   52 comparison: T_GREATERTHAN .

    $default  reduce using rule 52 (comparison)


State 44

   54 disjunction: T_OR .

    $default  reduce using rule 54 (disjunction)


State 45

   53 combination: T_AND .

    $default  reduce using rule 53 (combination)


State 46

   43 soperation: T_ADD .

    $default  reduce using rule 43 (soperation)


State 47

   44 soperation: T_SUB .

    $default  reduce using rule 44 (soperation)


State 48

   45 woperation: T_MUL .

    $default  reduce using rule 45 (woperation)


State 49

   46 woperation: T_DIV .

    $default  reduce using rule 46 (woperation)


State 50

   27 accessor: expression T_DOT . label

    T_IDENT  shift, and go to state 64

    label  go to state 65


State 51

   17 expression: expression soperation . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 66
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 52

   16 expression: expression woperation . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 67
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 53

   18 expression: expression comparison . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 68
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 54

   20 expression: expression combination . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 69
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 55

   21 expression: expression disjunction . expression

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 70
    accessor     go to state 23
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 56

   19 expression: accessor T_IDENTICAL . accessor

    T_IDENT      shift, and go to state 1
    T_REALCONST  shift, and go to state 10
    T_STRING     shift, and go to state 11
    T_H_DEREF    shift, and go to state 12
    T_REF        shift, and go to state 13
    T_TRUE       shift, and go to state 17
    T_FALSE      shift, and go to state 18
    T_NIL        shift, and go to state 19

    expression   go to state 71
    accessor     go to state 72
    dereference  go to state 24
    reference    go to state 25
    constant     go to state 26
    variable     go to state 27
    value        go to state 28


State 57

    8 statement: T_IF expression T_THEN . statement T_ELSE statement

    T_IDENT   shift, and go to state 1
    T_SKIP    shift, and go to state 2
    T_ALWAYS  shift, and go to state 3
    T_ONCE    shift, and go to state 4
    T_IF      shift, and go to state 5
    T_WHILE   shift, and go to state 6

    statement  go to state 73
    variable   go to state 9


State 58

    9 statement: T_WHILE expression T_DO . statement

    T_IDENT   shift, and go to state 1
    T_SKIP    shift, and go to state 2
    T_ALWAYS  shift, and go to state 3
    T_ONCE    shift, and go to state 4
    T_IF      shift, and go to state 5
    T_WHILE   shift, and go to state 6

    statement  go to state 74
    variable   go to state 9


State 59

    2 statement: statement . T_SEMIC statement
    2          | statement T_SEMIC statement .

    T_SEMIC  shift, and go to state 33

    T_SEMIC   [reduce using rule 2 (statement)]
    $default  reduce using rule 2 (statement)


State 60

    4 statement: variable T_ASSIGN T_NEW . record

    T_LBRACE  shift, and go to state 75

    record  go to state 76


State 61

    5 statement: variable T_ASSIGN expression .
   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_OR           shift, and go to state 44
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50

    $default  reduce using rule 5 (statement)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 62

   29 dereference: T_H_DEREF T_LPAREN reference . T_RPAREN

    T_RPAREN  shift, and go to state 77


State 63

   12 constraint: constraint . T_AND constraint
   12           | constraint T_AND constraint .

    $default  reduce using rule 12 (constraint)


State 64

   37 label: T_IDENT .

    $default  reduce using rule 37 (label)


State 65

   27 accessor: expression T_DOT label .

    $default  reduce using rule 27 (accessor)


State 66

   16 expression: expression . woperation expression
   17           | expression . soperation expression
   17           | expression soperation expression .
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_MUL  shift, and go to state 48
    T_DIV  shift, and go to state 49
    T_DOT  shift, and go to state 50

    T_DOT     [reduce using rule 17 (expression)]
    $default  reduce using rule 17 (expression)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 67

   16 expression: expression . woperation expression
   16           | expression woperation expression .
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_DOT  shift, and go to state 50

    T_DOT     [reduce using rule 16 (expression)]
    $default  reduce using rule 16 (expression)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 68

   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   18           | expression comparison expression .
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_ADD  shift, and go to state 46
    T_SUB  shift, and go to state 47
    T_MUL  shift, and go to state 48
    T_DIV  shift, and go to state 49
    T_DOT  shift, and go to state 50

    T_DOT     [reduce using rule 18 (expression)]
    $default  reduce using rule 18 (expression)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 69

   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   20           | expression combination expression .
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50

    T_DOT     [reduce using rule 20 (expression)]
    $default  reduce using rule 20 (expression)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 70

   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   21           | expression disjunction expression .
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50

    T_DOT     [reduce using rule 21 (expression)]
    $default  reduce using rule 21 (expression)

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 71

   16 expression: expression . woperation expression
   17           | expression . soperation expression
   18           | expression . comparison expression
   20           | expression . combination expression
   21           | expression . disjunction expression
   27 accessor: expression . T_DOT label

    T_LESSTHAN     shift, and go to state 38
    T_LEQUAL       shift, and go to state 39
    T_EQUAL        shift, and go to state 40
    T_NEQUAL       shift, and go to state 41
    T_GEQUAL       shift, and go to state 42
    T_GREATERTHAN  shift, and go to state 43
    T_OR           shift, and go to state 44
    T_AND          shift, and go to state 45
    T_ADD          shift, and go to state 46
    T_SUB          shift, and go to state 47
    T_MUL          shift, and go to state 48
    T_DIV          shift, and go to state 49
    T_DOT          shift, and go to state 50

    soperation   go to state 51
    woperation   go to state 52
    comparison   go to state 53
    combination  go to state 54
    disjunction  go to state 55


State 72

   19 expression: accessor . T_IDENTICAL accessor
   19           | accessor T_IDENTICAL accessor .
   24           | accessor .
